tactical_capabilities/tacs/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tacs
  namespace: bulo-sentinel
  labels:
    app: tacs
    component: tactical
spec:
  selector:
    app: tacs
  ports:
  - port: 80
    targetPort: 8000
    name: http
  type: ClusterIP
